Fix horizontal spacing of the recent tx widget

--- a/src/modules/transaction/components/RecentTransactions/RecentTransactions.css
+++ b/src/modules/transaction/components/RecentTransactions/RecentTransactions.css
@@ -1,9 +1,5 @@
 @import '../../../../../setup/react/app/mixins.css';
 
-.box {
-  max-width: var(--footer-button-width);
-}
-
 .wrapper {
   width: 100%;
   height: 100%;
